<resources>
    <string name="app_name">Ichor</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login1">LOGIN</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="blood_type">Blood Type</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="locality">Locality</string>
    <string name="email">Email</string>
    <string name="next">NEXT</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logged_in">Logged In</string>
    <string-array name="Bgrp">
        <item>A+</item>
        <item>B+</item>
        <item>O+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>B-</item>
        <item>O-</item>
        <item>AB-</item>
    </string-array>
</resources>